[package]
name = "crossing-api"
version = "0.1.0"
authors = ["Pedro Quiroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
nanoid = "0.3.0"
simple_logger = "1.5.0"
google-signin = "0.3.0"
dotenv = "0.15.0"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
default-features = false
features = ["json","redis_pool"]
version = "0.4.4"